Fix for bug 440974 (Unneeded <transformiix:root /> elements as a result of XSL transformation.). r/sr=sicking.